--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -327,3 +327,15 @@ ul.tab li a:focus, .active {
     from {opacity: 0;}
     to {opacity: 1;}
 }
+
+
+.highlight-announcement {
+  background: #fffbe6;
+  border: 1px solid #ffe58f;
+  padding: 1.5rem 1.5rem 1.5rem 2rem;
+  border-radius: 10px;
+  margin: 2rem auto;
+  max-width: 900px;
+  /* font-size: 1.1rem; */
+  box-shadow: 0 2px 8px rgba(255, 229, 143, 0.15);
+} 
